[gd_scene load_steps=8 format=3 uid="uid://cw44f02pmhruf"]

[ext_resource type="Script" path="res://scenes/interactable/locked_door.gd" id="1_1gi5y"]
[ext_resource type="Texture2D" uid="uid://uexct4mosylp" path="res://Assets/Art/Background/Industrial Tile Assets/Tilemap dungeon/frame_apngframe24.png" id="1_p12mp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f1g5y"]
size = Vector2(39, 39)

[sub_resource type="Animation" id="Animation_d74ph"]
resource_name = "Locked"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Center:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-8, -28), Vector2(-8, 6), Vector2(-8, 7), Vector2(-8, 8)]
}

[sub_resource type="Animation" id="Animation_4xeeg"]
resource_name = "Unlocked"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Center:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-8, 8), Vector2(-8, 7), Vector2(-8, 6), Vector2(-8, -28)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qu2wu"]
_data = {
"Locked": SubResource("Animation_d74ph"),
"Unlocked": SubResource("Animation_4xeeg")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_xv8dc"]
radius = 69.029

[node name="LockedDoor" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_1gi5y")

[node name="Center" type="Node2D" parent="."]
position = Vector2(-8, 8)

[node name="bottom left" type="Node2D" parent="Center"]

[node name="Sprite2D2" type="Sprite2D" parent="Center/bottom left"]
position = Vector2(3.5, -3.5)
texture = ExtResource("1_p12mp")
flip_v = true

[node name="Sprite2D4" type="Sprite2D" parent="Center/bottom left"]
position = Vector2(-3.5, 3.5)
texture = ExtResource("1_p12mp")
flip_h = true

[node name="bottom right" type="Node2D" parent="Center"]
position = Vector2(16, 0)

[node name="Sprite2D2" type="Sprite2D" parent="Center/bottom right"]
position = Vector2(3.5, -3.5)
texture = ExtResource("1_p12mp")
flip_v = true

[node name="Sprite2D4" type="Sprite2D" parent="Center/bottom right"]
position = Vector2(-3.5, 3.5)
texture = ExtResource("1_p12mp")
flip_h = true

[node name="top right" type="Node2D" parent="Center"]
position = Vector2(16, -16)

[node name="Sprite2D2" type="Sprite2D" parent="Center/top right"]
position = Vector2(3.5, -3.5)
texture = ExtResource("1_p12mp")
flip_v = true

[node name="Sprite2D4" type="Sprite2D" parent="Center/top right"]
position = Vector2(-3.5, 3.5)
texture = ExtResource("1_p12mp")
flip_h = true

[node name="top left" type="Node2D" parent="Center"]
position = Vector2(0, -16)

[node name="Sprite2D2" type="Sprite2D" parent="Center/top left"]
position = Vector2(3.5, -3.5)
texture = ExtResource("1_p12mp")
flip_v = true

[node name="Sprite2D4" type="Sprite2D" parent="Center/top left"]
position = Vector2(-3.5, 3.5)
texture = ExtResource("1_p12mp")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_f1g5y")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qu2wu")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_xv8dc")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
